sample-nodejs-app-main/your-k8s-manifests/deployment.yaml
# deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: mynamespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      serviceAccountName: hello-sa
      containers:
      - name: hello-app
        image: yourdockerhubusername/k8s-hello-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
