sample-nodejs-app-main/your-k8s-manifests/service.yaml
# service.yaml
---
#
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: mynamespace
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
