sample-nodejs-app-main/your-k8s-manifests/netpol.yaml
# netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-ingress
  namespace: mynamespace
spec:
  podSelector:
    matchLabels:
      app: hello-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
